<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/txt_oferta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/ofertas"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linea_oferta"
                    android:layout_width="match_parent"
                    android:layout_height="3sp"
                    android:layout_marginStart="70dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginBottom="15dp"
                    android:background="#3F51B5"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_software"
                    android:layout_width="match_parent"
                    android:layout_height="222dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/desarrolllo"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/logohorizontal" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tecnologia"
                        android:textColor="#FFC102"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/software"
                        android:textColor="#F6F3F3"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_software"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginRight="90dp"
                        android:background="@drawable/style_btn"
                        android:text="@string/btn"
                        android:textColor="#070707"
                        android:textStyle="bold"
                        app:backgroundTint="#F4F6F8" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_conta"
                    android:layout_width="match_parent"
                    android:layout_height="222dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@mipmap/conta"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/logohorizontal" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tecnologia"
                        android:textColor="#FFC102"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/contabilidad"
                        android:textColor="#F6F3F3"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_conta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="90dp"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="90dp"
                        android:layout_marginRight="90dp"
                        android:background="@drawable/style_btn"
                        android:text="@string/btn"
                        android:textColor="#070707"
                        android:textStyle="bold"
                        app:backgroundTint="#F4F6F8" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>